# core-blender-development

./: .gitmodules  LICENSE.txt  README  README.md
chapter_2/: README  chap2.py
chapter_3/: CMakeLists.txt  README.txt
chapter_3/intern/: CMakeLists.txt
chapter_3/intern/ghost/test/: CMakeLists.txt
chapter_3/intern/ghost/test/triangles/: GHOST_C-Triangles.c
chapter_8/source/blender/editors/space_api/: spacetypes.c
chapter_8/source/blender/editors/space_tutorial/: CMakeLists.txt
chapter_8/source/blender/makesrna/intern/: CMakeLists.txt
source/blender/blenkernel/: BKE_context.h
source/blender/blenkernel/intern/: context.c
source/blender/editors/: CMakeLists.txt
source/blender/editors/include/: ED_space_api.h
source/blender/editors/space_tutorial/: space_tutorial.c
source/blender/makesdna/: DNA_space_types.h
source/blender/makesrna/: RNA_access.h
source/blender/makesrna/intern/: rna_space.c
